# hbr_models

./: .gitignore  README.md  arc_hbr.md  design.md  github_key.pub  modelling.md  specification.md  testing.md
.github/workflows/: codes_editor_release.yaml  py_hbr_package.yml  rhbr_package.yml
codes_editor/: .gitignore  README.md  icd10_example.yaml  opcs4_example.yaml  package-lock.json  package.json  thing.yaml
codes_editor/pages/: icd.tsx  index.tsx  record.tsx
codes_editor/services/: search_term.tsx
codes_editor/src-tauri/: Cargo.toml  tauri.conf.json
codes_editor/styles/: Category.module.css  ClinicalCodeComp.module.css
codes_editor/utils/: icd10_api.R
notes/: README.md  arc_hbr.md  modelling.md  testing.md
parquet_test/: Cargo.toml
parquet_test/src/: main.rs
py_hbr/: Cargo.toml  README.md  pyproject.toml
py_hbr/src/: lib.rs
py_hic/: Cargo.toml  README.md  pyproject.toml
py_hic/py_hic/: foo.py
py_hic/python/py_hic/: clinical_codes.py  foo.py  rust_interface.py
py_hic/src/: lib.rs
python/: README.md  pyproject.toml
python_hic/: Cargo.toml  pyproject.toml
python_hic/src/: lib.rs
rhbr/: DESCRIPTION  NAMESPACE  README.md
rhbr/R/: extendr-wrappers.R  rust_interface.R
rhbr/man/: get_codes_in_group.Rd  get_groups_in_codes_file.Rd  rust_get_codes_in_group.Rd  rust_get_groups_in_codes_file.Rd
rhbr/src/: Makevars  Makevars.win  entrypoint.c  rhbr-win.def
rhic/: DESCRIPTION  NAMESPACE  README.md
rhic/R/: extendr-wrappers.R  foo.R  rust_interface.R
rhic/man/: get_codes.Rd  get_codes_in_group.Rd  hello_world.Rd  rust_get_codes_in_group.Rd
rhic/src/: Makevars  Makevars.win  entrypoint.c  rhic-win.def
rust_hbr/: Cargo.toml
rust_hbr/examples/: code_parser.rs  mongodb.rs  pathology_blood.rs  patient.rs  polars.rs
rust_hbr/src/: lib.rs  pathology_blood.rs  seeded_column_block.rs  synth_data.rs
rust_hic/: Cargo.toml  README.md
rust_hic/examples/: code_parser.rs  pathology_blood.rs  patient.rs  polars.rs  sql_test.rs
rust_hic/resources/test/: icd10_example.yaml
rust_hic/src/: clinical_code.rs  clinical_code_tree.rs  code_parser.rs  lib.rs  pathology_blood.rs  patient.rs  preprocess.rs  seeded_column_block.rs  seeded_rng.rs
rust_hic/src/clinical_code_tree/: index.rs
rust_hic/src/patient/: measurements.rs  spell.rs
rust_hic/src/patient/spell/: episode.rs
scripts/: README.md  descriptive.R
scripts/bleeding_ischaemia_risk_tradeoff/: .gitignore  _quarto.yml  hes_tradeoff.qmd  references.bib
scripts/codes_files/: icd10.yaml  opcs4.yaml  opcs4_blank.yaml
scripts/prototypes/: README.md  Source.gv  bleeding_logreg.py  bleeding_survival.R  calibration.py  code_group_counts.R  code_group_counts.py  (+41 more)
sql_test/: Cargo.toml
synth_data/: Cargo.toml
synth_data/examples/: parquet_test.rs  pathology_blood.rs
synth_data/src/: lib.rs  main.rs  pathology_blood.rs
(+19 files in other folders)
