[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "py_hic"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pandas >= 2.0.3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "py_hic._lib_name"