[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hic"
version = "0.0.1"
authors = [
  { name="John Scott", email="john.scott17@nhs.net" },
]
description = "Python interface for the Rust library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]