[package]
name = "rust_hic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
blake2 = "0.10.6"
datafusion = "27.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = "1.29.1"
arrow-odbc = "0.28"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4", "serde_with"] }
chrono = "0.4"
serde = "1"
bimap = "0.6.3"
connectorx = { version = "0.3", features = ["src_mssql", "dst_arrow2"] }
polars = "0.31"
serde_yaml = "0.9"
serde_with = "3.2"