[package]
name = "synth_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
#arrow = "43.0.0"
datafusion = "27.0.0"
parquet = "43.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = "1.29.1"
